# c-labs

./: CMakeLists.txt  lab1.c  lab10_17.c  lab8.c  lab9_19.c  main.cpp
c/: lab11_10.c  lab12.c  lab13.c  lab2.c  lab3.c  lab3_3.c  lab4.c  lab5.c  lab6.c  lab6_2_13.c  lab7.c  lab9.c  lab9_39.c
cpp/: lab3_2.cpp
