# cmake_minimum_required(VERSION <specify CMake version here>)
project(CLion C)

set(CMAKE_C_STANDARD 99)

add_executable(lab1 lab1.c)
add_executable(lab2 lab2.c)
add_executable(lab3 lab3.c)
add_executable(lab4 lab4.c)
add_executable(lab5 lab5.c)
add_executable(lab6 lab6.c)
add_executable(lab6_2_13 lab6_2_13.c)
add_executable(lab3_2 lab3_2.c)
add_executable(lab3_3 lab_3.c)
add_executable(lab7 lab7.c)
add_executable(lab8 lab8.c)
add_executable(lab9 lab9.c)
add_executable(lab9_19 lab9_19.c)
add_executable(lab9_39 lab9_39.c)
add_executable(lab10_17 lab10_17.c)
add_executable(lab11_10 lab11_10.c)
add_executable(lab12 lab12.c)
add_executable(lab13 lab13.c)