# cmake_minimum_required(VERSION <specify CMake version here>)
project(CLion C)

cmake_minimum_required(VERSION 3.9)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
set(CMAKE_C_STANDARD 99)

add_executable(c_lab1 c/lab1.c)
add_executable(c_lab2 c/lab2.c)
add_executable(c_lab3 c/lab3.c)
add_executable(c_lab4 c/lab4.c)
add_executable(c_lab5 c/lab5.c)
add_executable(c_lab6 c/lab6.c)
add_executable(c_lab6_2_13 c/lab6_2_13.c)
add_executable(c_lab3_2 c/lab3_2.c)
add_executable(c_lab3_3 c/lab_3.c)
add_executable(c_lab7 c/lab7.c)
add_executable(c_lab8 c/lab8.c)
add_executable(c_lab9 c/lab9.c)
add_executable(c_lab9_19 c/lab9_19.c)
add_executable(c_lab9_39 c/lab9_39.c)
add_executable(c_lab10_17 c/lab10_17.c)
add_executable(c_lab11_10 c/lab11_10.c)
add_executable(c_lab12 c/lab12.c)
add_executable(c_lab13 c/lab13.c)

add_executable(cpp_lab1 cpp/lab1.cpp)
add_executable(cpp_lab2 cpp/lab2.cpp)
add_executable(cpp_lab3 cpp/lab3.cpp)
add_executable(cpp_lab4 cpp/lab4.cpp)
add_executable(cpp_lab5 cpp/lab5.cpp)
add_executable(cpp_lab6 cpp/lab6.cpp)
add_executable(cpp_lab6_2_13 cpp/lab6_2_13.cpp)
add_executable(cpp_lab3_2 cpp/lab3_2.cpp)
add_executable(cpp_lab3_3 cpp/lab_3.cpp)
add_executable(cpp_lab7 cpp/lab7.cpp)
add_executable(cpp_lab8 cpp/lab8.cpp)
add_executable(cpp_lab9 cpp/lab9.cpp)
add_executable(cpp_lab9_19 cpp/lab9_19.cpp)
add_executable(cpp_lab9_39 cpp/lab9_39.cpp)
add_executable(cpp_lab10_17 cpp/lab10_17.cpp)
add_executable(cpp_lab11_10 cpp/lab11_10.cpp)
add_executable(cpp_lab12 cpp/lab12.cpp)
add_executable(cpp_lab13 cpp/lab13.cpp)